--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
       body {
       background-color: #0f172a;
       color: white;
-      background-image: url('background.jpg');
+      background-image: url('/static/background.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
