--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
   </header>
 
   <main class="flex-grow flex flex-col items-center justify-center text-center px-4">
-    <h2 class="text-xl md:text-2xl font-semibold mt-10">探索最新科技新聞、與 AI 對話、獲得即時洞察</h2>
+    <font size="5" color="blue"><b>探索最新科技新聞、與 AI 對話、獲得即時洞察</b></font><br>
     <a href="/news" class="mt-8 inline-block bg-black text-white border border-white px-6 py-3 rounded-full hover:bg-white hover:text-black transition">更新新聞資料庫</a>
   </main>
 
