--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
 
     <section class="mt-20 max-w-3xl w-full px-4 text-center">
       <h3 class="text-2xl text-black font-bold mb-4">加入我們的 Line Bot</h3>
-      <p class="text-sm text-gray-300 mb-4">掃描下方 QR Code，快速接收最新科技新聞與互動服務：</p>
+      <p class="text-sm text-black mb-4">掃描下方 QR Code，快速接收最新科技新聞與互動服務：</p>
       <div class="w-full flex justify-center">
         <div class="w-40 h-40 bg-white rounded-lg flex items-center justify-center">
           <img src="{{ url_for('static', filename='QRcode.png') }}" alt="Line Bot QR Code" class="w-full h-full object-contain rounded-lg">
