--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     <a href="/news" class="mt-8 inline-block bg-black text-white border border-white px-6 py-3 rounded-full hover:bg-white hover:text-black transition">更新新聞資料庫</a>
 
     <section class="mt-20 max-w-5xl w-full px-4">
-      <h3 class="text-2xl font-bold mb-6 text-center text-black">近年科技發展趨勢與議題</h3>
+      <h3 class="text-2xl font-bold mb-6 text-center text-black">NOVA</h3>
       <div class="flex flex-col lg:flex-row items-center gap-8">
         <div class="text-left order-2 lg:order-1">
           <p class="text-lg leading-relaxed text-center text-black">
